manifests/101_canary-simple.yaml
apiVersion: argoproj.io/v1alpha1
kind: Rollout
metadata:
  name: canary-demo
  labels:
    app: canary-demo
spec:
  replicas: 3
  revisionHistoryLimit: 3
  selector:
    matchLabels:
      app: canary-demo
  strategy:
    canary:
      steps:
        - setWeight: 10
        - pause: { duration: 30s }
        - setWeight: 20
        - pause: { duration: 30s }
        - setWeight: 40
        - pause: {}
        - setWeight: 75
        - pause: { duration: 30s }
        - setWeight: 100
  template:
    metadata:
      annotations: {}
      labels:
        app: canary-demo
    spec:
      containers:
        - name: myapp
          image: canary-demo-app:green
          ports:
            - name: http
              containerPort: 8080
              protocol: TCP
          resources:
            requests:
              memory: 64Mi
              cpu: 20m
            limits:
              memory: 128Mi
              cpu: 40m
          readinessProbe:
            initialDelaySeconds: 2
            httpGet:
              path: /ready
              port: http
