manifests/402_canary-notifications.yaml
apiVersion: argoproj.io/v1alpha1
kind: Rollout
metadata:
  name: canary-demo
  labels:
    app: canary-demo
  annotations:
    notifications.argoproj.io/subscribe.slack: "argo-rollouts-notifications"
spec:
  replicas: 3
  revisionHistoryLimit: 3
  selector:
    matchLabels:
      app: canary-demo
  strategy:
    canary:
      canaryService: canary-svc
      stableService: stable-svc
      trafficRouting:
        istio:
          virtualService:
            name: canary-demo
            routes:
              - primary
      analysis:
        startingStep: 4
        templates:
          - templateName: error-rate
      steps:
        - setWeight: 20
        - pause: { duration: 30s }
        - analysis:
            templates:
              - templateName: rpm
            args:
              - name: threshold
                value: "5"
        - setWeight: 40
        - pause: { duration: 30s }
        - setWeight: 60
        - pause: { duration: 30s }
        - setWeight: 80
        - pause: { duration: 30s }
        - analysis:
            templates:
              - templateName: rpm
            args:
              - name: threshold
                value: "10"
  template:
    metadata:
      annotations:
        capability: notifications
      labels:
        app: canary-demo
    spec:
      containers:
        - name: myapp
          image: orlandovald/canary-demo-app:yellow
          ports:
            - name: http
              containerPort: 8080
              protocol: TCP
          resources:
            requests:
              memory: 64Mi
              cpu: 20m
            limits:
              memory: 128Mi
              cpu: 40m
          readinessProbe:
            initialDelaySeconds: 2
            httpGet:
              path: /ready
              port: http
