manifests/201_services.yaml
apiVersion: v1
kind: Service
metadata:
  name: canary-svc
spec:
  ports:
    - port: 8080
      targetPort: 8080
      protocol: TCP
      name: http
  selector:
    app: canary-demo
    # This selector will be updated by the Argo controler
---
apiVersion: v1
kind: Service
metadata:
  name: stable-svc
spec:
  ports:
    - port: 8080
      targetPort: 8080
      protocol: TCP
      name: http
  selector:
    app: canary-demo
    # This selector will be updated by the Argo controler
