manifests/201_services_and_istio.yaml
apiVersion: v1
kind: Service
metadata:
  name: canary-svc
spec:
  ports:
    - port: 8080
      targetPort: 8080
      protocol: TCP
      name: http
  selector:
    app: canary-demo
    # This selector will be updated by the Argo controler

---
apiVersion: v1
kind: Service
metadata:
  name: stable-svc
spec:
  ports:
    - port: 8080
      targetPort: 8080
      protocol: TCP
      name: http
  selector:
    app: canary-demo
    # This selector will be updated by the Argo controler

---
# Istio resources
apiVersion: networking.istio.io/v1
kind: Gateway
metadata:
  name: canary-demo
spec:
  selector:
    istio: ingressgateway
  servers:
    - port:
        number: 80
        name: http
        protocol: HTTP
      hosts:
        - "*"

---
apiVersion: networking.istio.io/v1
kind: VirtualService
metadata:
  name: canary-demo
spec:
  gateways:
    - canary-demo
  hosts:
    - "*"
  http:
    - name: primary
      route:
        - destination:
            host: stable-svc
            port:
              number: 8080
          weight: 100
        - destination:
            host: canary-svc
            port:
              number: 8080
          weight: 0
