manifests/202_istio.yaml
apiVersion: networking.istio.io/v1
kind: Gateway
metadata:
  name: canary-demo
spec:
  selector:
    istio: ingressgateway
  servers:
    - port:
        number: 80
        name: http
        protocol: HTTP
      hosts:
        - "*"
---
apiVersion: networking.istio.io/v1
kind: VirtualService
metadata:
  name: canary-demo
spec:
  gateways:
    - canary-demo
  hosts:
    - "*"
  http:
    - name: primary
      route:
        - destination:
            host: stable-svc
            port:
              number: 8080
          weight: 100
        - destination:
            host: canary-svc
            port:
              number: 8080
          weight: 0
